	fix bug (segfault) on some hangups (Stephan Eisvogel)
	support passing "+" in the dialstring
	simulate hangup when replay EOF is encountered
1.3.0
	improve logging for dspdebug
	buffer audio when modem is in command-mode and process it when not
	improve pty read speed
	improve logging detail
	allow spandsp-v17rx fast-train to be more-permissive
	update to spandsp-0.0.6
	fix problem on some platforms triggered by large clock skips
	avoid a bug in libiax2 sometimes after a call ends
	patch libiax2 to recognize (but ignore) CallToken
	use the S7 register instead of a hard 45-second answer timeout
        refactored process management (Federico Heinz)
	move call to closedir to resolve problems on BSD (John Bayly)
	if the timestamp jumps too much the jitterbuffer ignores it (Ivan Tikhonov)
	update to spandsp-20100228
	some changes for FreeBSD support to iaxmodem.c
	fix more unaligned problems for big-endian systems (libiax2)
	if we hang up on a call that is ringing then answer+hangup with IAX2 (Travis Schafer)
1.2.0
	improve skew behavior, especially for faulty RTC; add "skew" config feature
	add support for command-dial (ATD...;) in spandsp
	add support for ATA for CED when off-hook and connected to a call
	add support for ATD for CNG when off-hook and connected to a call
	fix the ordering of the seteuid()/setegid() (Julien BLACHE)
	update spandsp to 20080725 snapshot

1.1.1
	fix unaligned errors in libiax2 (Gus Bourg)
	improve training in spandsp V.27ter receive (Steve Underwood)
	fix a potential crash (divide by zero) in spandsp V.17 receive (Steve Underwood)
1.1.0
	kill -HUP now makes the modems wait to restart when they're on-hook
	improve IAX2 call rejection when the modem is busy by using
	    REJECT instead of ACCEPT+CONGSTN+HANGUP
	add "nodaemon" config file feature
	add "iax2debug" and "dspdebug" config file features
	update spandsp to 20080110 snapshot
	update libiax2 to current iaxclient/lib/libiax2 + patches
1.0.0
	provide strndup for Solaris
0.3.2